# GSMINRESpp

./: .gitignore  CMakeLists.txt  CMakeListsOLD.txt  Doxyfile  LICENSE  Makefile  README.md  algorithm_8dox.html  algorithm_page.html  annotated.html  check__PD_8py.html  classes.html  classgsminres_1_1Solver-members.html  classgsminres_1_1Solver.html  converter_8py.html  dir_000001_000000.html  dir_000002_000000.html  dir_472fafaf0f039b9e6b043966c1ef7dbf.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_c29eeb5af533606caea8a09e66794740.html  dir_c29eeb5af533606caea8a09e66794740_dep.map  dir_c29eeb5af533606caea8a09e66794740_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  gsminres__blas_8hpp.html  gsminres__blas_8hpp__dep__incl.map  gsminres__blas_8hpp__dep__incl.md5  gsminres__blas_8hpp__incl.map  (+93 more)
.github/workflows/: deploy-docs.yml
cmake/: gsminresConfig.cmake.in
data/: check_PD.py  converter.py  getmatrix.sh
docs/: algorithm.dox  html  install.dox  licnse.dox  mainpage.dox  overview.dox  usage.dox
include/: gsminres_blas.hpp  gsminres_c_api.h  gsminres_c_api_util.hpp  gsminres_lapack.hpp  gsminres_solver.hpp  gsminres_util.hpp
sample/: sample1.cpp  sample1_f.f90  sample2.cpp  sample2_c.c  sample_std.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  namespaces_0.js  namespaces_1.js  (+24 more)
src/: gsminres_c_api.cpp  gsminres_fortran_interface.cpp  gsminres_fortran_interface.f90  gsminres_solver.cpp  gsminres_util.cpp
